force-app/main/default/objects/Party_Identification_Collection__dll/Party_Identification_Collection__dll.object-meta.xml
<CustomObject>
    <label>Party Identification Collection</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Profile</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>