force-app/main/default/objects/Party_Identification_Collection__dll/fields/Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Identification_Number__c</fullName>
    <label>Identification Number</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Identification_Number</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>