force-app/main/default/objects/Party_Identification_Collection__dll/fields/Party_Identification_ID__c.field-meta.xml
<CustomField>
    <fullName>Party_Identification_ID__c</fullName>
    <label>Party Identification ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Party_Identification_ID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>